--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # set of people in order to allow BBPOS collaboration.
 # An approval from a stripe must be required for every PR into Stripe repos.
 
-* @stripe/terminal
+* @stripe/terminal-aod
