Update Gradle properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,25 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Enable BuildConfig
+# See https://developer.android.com/reference/tools/gradle-api/7.0/com/android/build/api/dsl/BuildFeatures#buildconfig
+android.defaults.buildfeatures.buildconfig=true
+
+# Disable AIDL compilation
+# See https://developer.android.com/reference/tools/gradle-api/7.0/com/android/build/api/dsl/BuildFeatures#aidl
+android.defaults.buildfeatures.aidl=false
+
+# Disable renderscript
+# See https://developer.android.com/reference/tools/gradle-api/7.0/com/android/build/api/dsl/BuildFeatures#renderscript
+android.defaults.buildfeatures.renderscript=false
+
+# Disable shaders
+# See https://developer.android.com/reference/tools/gradle-api/7.0/com/android/build/api/dsl/BuildFeatures#shaders
+android.defaults.buildfeatures.shaders=false
+
+# Disable resource processing for library modules
+# See https://developer.android.com/reference/tools/gradle-api/7.0/com/android/build/api/dsl/LibraryBuildFeatures#androidresources
+android.library.defaults.buildfeatures.androidresources=false
+
+android.nonFinalResIds=true
