--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-lifecycle-version = "2.6.1"
-navigation-version = "2.5.3"
+lifecycle-version = "2.7.0"
+navigation-version = "2.7.6"
 retrofit-version = "2.9.0"
-stripeterminal-version = "3.1.0"
+stripeterminal-version = "3.3.0"
 
 [libraries]
 androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
-androidx-core-ktx = "androidx.core:core-ktx:1.10.0"
-androidx-fragment-ktx = "androidx.fragment:fragment-ktx:1.5.7"
+androidx-core-ktx = "androidx.core:core-ktx:1.12.0"
+androidx-fragment-ktx = "androidx.fragment:fragment-ktx:1.6.2"
 androidx-swiperefreshlayout = "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
 androidx-lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata", version.ref = "lifecycle-version" }
@@ -17,15 +17,16 @@ androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-r
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-version" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-version" }
 
-android-material = "com.google.android.material:material:1.9.0"
+android-material = "com.google.android.material:material:1.11.0"
 
-kotlinx-coroutines-android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
+kotlinx-coroutines-android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
-okhttp = "com.squareup.okhttp3:okhttp:4.11.0"
+okhttp = "com.squareup.okhttp3:okhttp:4.12.0"
 
 retrofit2-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit-version" }
 retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit-version" }
 
+secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version = "2.0.1" }
 stripe-terminal-core = { group = "com.stripe", name = "stripeterminal-core", version.ref = "stripeterminal-version" }
 stripe-terminal-handoffclient = { group = "com.stripe", name = "stripeterminal-handoffclient", version.ref = "stripeterminal-version" }
 
