--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,5 @@ android.defaults.buildfeatures.shaders=false
 android.library.defaults.buildfeatures.androidresources=false
 
 android.nonFinalResIds=true
+
+org.gradle.java.home=/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
